# erikfran-chess-gui

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
res/: Knight__w.mtl  Rook__b.mtl
src/: alvinw_chess_utils.rs  client.rs  erikfran_chess_utils.rs  fritiofr_chess_utils  fritiofr_chess_utils.rs  gg.rs  lib.rs  main.rs  model.rs  redkar_chess_utils.rs  resources.rs  serde.rs  server.rs  shader.wgsl  texture.rs  three.rs
