[package]
name = "erikfran-chess-gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
redkar-chess = { git = "https://github.com/INDA23PlusPlus/redkar-chess" }
chess = { git = "https://github.com/INDA23PlusPlus/erikfran-chess" }
alvinw-chess = { git = "https://github.com/INDA23PlusPlus/alvinw-chess" }
#fritiofr_chess = { path = "../repos/fritiofr-chess" } 
fritiofr_chess = { git = "https://github.com/INDA23PlusPlus/fritiofr-chess"}
#redkar-chess = { git = "https://github.com/ErikFrankling/redkar-chess" }
ggez = "0.9.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chess-network-protocol = { git = "https://github.com/INDA23PlusPlus/chess-network-protocol" } # { path = "../chess-network-protocol"}
ggegui = "0.3.7"
local-ip-address = "0.5.6"